# RobotOdometry_Project

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
config/: main.yaml
scripts/: cartracking.py  mobile_calib.py
src/: dataset.py  feature_extraction.py  feature_extraction_gpu.py  orb_featurematch.cpp  simulation.py  trajectory.cpp  trajectory_imu.py  trajectory_vis.py
